--- a/src/app/sections/categories/game-series-card/game-series-card.component.html
+++ b/src/app/sections/categories/game-series-card/game-series-card.component.html
@@ -19,6 +19,12 @@
               <i class="bi bi-calendar-event me-2 text-warning"></i>
               {{ serie.begin_at | date:'MMM d, y' }} - {{ serie.end_at | date:'MMM d, y' }}
             </p>
+            <button class="btn btn-sm btn-warning w-100 d-flex align-items-center justify-content-center gap-2"
+              (click)="addToFavorites(serie.id)" [disabled]="addedFavorites.has(serie.id)">
+              <i class="bi bi-star-fill"></i>
+              {{ addedFavorites.has(serie.id) ? 'Favorito guardado' : 'Guardar favorito' }}
+            </button>
+
           </div>
         </div>
       </div>
