--- a/src/app/sections/categories/game-match-card/game-match-card.component.html
+++ b/src/app/sections/categories/game-match-card/game-match-card.component.html
@@ -23,8 +23,7 @@
                 Format: Bo{{ match.number_of_games }}
               </li>
               <li>
-                <span class="badge"
-                      [ngClass]="{
+                <span class="badge" [ngClass]="{
                         'bg-warning text-dark': match.status === 'running',
                         'bg-secondary': match.status === 'finished',
                         'bg-success': match.status === 'not_started'
@@ -32,7 +31,14 @@
                   {{ match.status | titlecase }}
                 </span>
               </li>
+
             </ul>
+            <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
+              (click)="addToFavorites(match.id)" [disabled]="addedFavorites.has(match.id)">
+              <i class="bi bi-star-fill"></i>
+              {{ addedFavorites.has(match.id) ? 'Favorito guardado' : 'Guardar favorito' }}
+            </button>
+
           </div>
         </div>
       </div>
